Adicionado compass no comando hud

--- a/resources/[vrp]/vrp_minimap/html/ui.html
+++ b/resources/[vrp]/vrp_minimap/html/ui.html
@@ -6,11 +6,11 @@
 <body>
 
 <div class="mapfoil">
-  <div class="outline">
+  <!-- <div class="outline">
       <center>
         <div class="mapborder"></div>
       </center>
-  </div> 
+  </div>  -->
 </div>
 
 </body>
